Add draft event deletion
